--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,3 +8,9 @@
   /* width: 80vw; */
   text-align: center;
 }
+
+#root {
+  background-image: url(./components/images/parchment.jpg);
+  height: 100vh;
+  width: 100vw;
+}
